2017-09-29  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb-ccid.c (epo_init, epi_init, ccid_thread): Simplify.
	(EP1_IN_Callback, ccid_prepare_receive, EP1_OUT_Callback)
	(usb_rx_ready, ccid_error, ccid_power_on, ccid_send_status)
	(ccid_send_data_block_internal, ccid_send_data_block_0x9000)
	(ccid_send_data_block_gr, ccid_send_params)
	(ccid_notify_slot_change, _write) [GNU_LINUX_EMULATION]: Use
	different usb driver API.

	* src/usb_ctrl.c (usb_device_reset): Fix control endpoint init.
	(gnuk_setup_endpoints_for_interface): Add DEV
	argument.
	(usb_device_reset) [GNU_LINUX_EMULATION]: Use usb_lld_setup_endp.

2017-09-29  NIIBE Yutaka  <gniibe@fsij.org>

	* src/main.c [FLASH_UPGRADE_SUPPORT] (main): Factor out flash ROM
	upgrade support.
	(calculate_regnual_entry_address): Likewise.
	* src/usb_ctrl.c (usb_setup, download_check_crc32): Likewise.

	* src/openpgp.c (modify_binary): Fix for 64-bit machine.
	* src/openpgp-do.c (encrypt, decrypt): Likewise.
	(gpg_data_scan): Likewise.
	(gpg_do_chks_prvkey): Fix error return path.

	* src/stack-def.h: New.

	* src/gnuk.ld.in: Remove stack definitions.
	* src/configure: Remove stack size modifications.

	* src/main.c (STACK_MAIN, STACK_PROCESS_1): Use stack-def.h.
	* src/usb-ccid.c (STACK_PROCESS_3): Likewise.
	* src/usb-msc.c (STACK_PROCESS_5): Likewise.
	* src/pin-cir.c (STACK_PROCESS_6, STACK_PROCESS_7): Likewise.

	* src/usb_ctrl.c (download_check_crc32): Use chrc32_rv_ functions.

	* src/mcu-stm32f103.c (rbit, check_crc32): Remove.

	* src/neug.c: Update from NeuG.
	* src/neug.h: Ditto.

2017-09-28  NIIBE Yutaka  <gniibe@fsij.org>

	* src/ec_p256k1.c (coefficient_a): Remove.

	* library/bignum.c (mpi_fill_pseudo_random): Fix for 64-bit.

	* src/call-rsa.c (rsa_decrypt): Fix for 64-bit machine.

	* src/flash.c (flash_do_storage_init): Rename from flash_init.
	(flash_key_storage_init): Rename from flash_init_keys.
	* src/openpgp.c (gpg_init): Use new function names.

	* src/stdlib.h: Update for GNU/Linux emulation.
